2 of the following patches shouldn't be controversial. Depending on the maintainer opinion on vala bindings, the last patch might be more controversial. (some of the reasons to have vala bindings in upstream are listed here: https://live.gnome.org/Vala/UpstreamGuide)
Created attachment 57276 [details] [review] Add a global act.h library header for bindings
Created attachment 57277 [details] [review] Generate ActUserManagerError type too
Created attachment 57278 [details] [review] build: add optionnal vala bindings generation
Thanks, pushed.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.