Generate ActUserManagerError type too

https://bugs.freedesktop.org/show_bug.cgi?id=46283